# word.py

./: .project  .pydevproject  README.md  pyproject.toml
export/com/softalks/: word.py
exported/com/softalks/: words.py
