[project]
name = "com.softalks.words"
description = "Overrides print to allow word wrapping over stdout"
version = "0.0.1"
authors = [
  {name = "Santiago Ruiz", email= "hiebra@hotmail.com"}
]
dependencies = [
    "com.softalks.debug @ git+https://github.com/hiebra/rpdb@v0.0.1",
]
[tool.setuptools.packages.find]
where = ["exported"]

